[package]
name = "image-prog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
imageproc = { git = "https://github.com/image-rs/imageproc" }
serde = {version =  "1.0.*", features =  ["serde_derive"]}
serde_json = "1.0.79"